fixed main CTA button
the main “Call To Action” button on landing page had strange hover
borders making it look weird. removed the unnesscary hover additions

--- a/V2 site/style.css
+++ b/V2 site/style.css
@@ -217,9 +217,9 @@ form
     a.button.full:hover {
       background-color: #FF9735;
       color: #ffffff;
-      text-shadow: 1px 1px 1px rgba(0,0,0,.5);
-      box-shadow:inset 0px 0px 0px 2px #00ccea;
-      border: 1px solid #f2f2f2;
+      /*text-shadow: 1px 1px 1px rgba(0,0,0,.5);*/
+      /*box-shadow:inset 0px 0px 0px 2px #00ccea;*/
+      /*border: 1px solid #f2f2f2;*/
     }
 
 .banner2
@@ -910,11 +910,11 @@ border-radius : 25px;
 
 button.enviar:hover
 {
-   background-color: #fff104;
+  background-color: #FF9735;
   color: #015969;
-        text-shadow: 1px 1px 1px rgba(0,0,0,.5);
-      box-shadow:inset 0px 0px 0px 2px #00ccea;
-          font-family: 'Open Sans', sans-serif;
+  text-shadow: 1px 1px 1px rgba(0,0,0,.5);
+  box-shadow:inset 0px 0px 0px 2px #00ccea;
+  font-family: 'Open Sans', sans-serif;
 }
 
 
